<resources>
    <string name="app_name">Call-E</string>
    <string name="action_settings">Settings</string>
    <string name="action_resync">Re-Sync Logs</string>
    <string name="action_rate_app">Rate Us</string>
    <string name="action_share_app">Share This App</string>
    <string name="share_via">Share via</string>
    <string name="share_text_msg">Save and Manage Post-paid Bills!!\n
            Manage your STD, Local, Roaming Minutes automatically with this amazing Call Timer designed only for Indian users.\n
            Download "Call-E Smart Call Timer" - \n
            http://play.google.com/store/apps/details?id=com.evadroid.calle</string>
    <string name="title_activity_unknown_numbers">Categorize Unknown Numbers</string>
    <string name="action_modify_list">Modify List</string>
    <string name="action_add_a_number">Add a Number</string>
    <string name="select_all">Select All</string>
    <string name="bill_cycle">Bill Cycle</string>
    <string name="title_activity_help">Help</string>
    <string name="no_items_in_list">No Items In The List</string>
    <string name="setup_page_1_text">Advance Call Timer and Logger\n\nEasy, Smart, Elegant\n\nKeep Track of your chargeable minutes and save your bills</string>
    <string name="setup_page_2_title">Automatic Categorization</string>
    <string name="setup_page_2_text">Categorize your Local, STD, Roaming, ISD, and Free Minutes automagically\nNo manual entry needed</string>
    <string name="setup_page_3_text">This is first time setup wizard\nLet\'s setup your usage/plan details</string>
    <string name="analyzing_logs">Analyzing Your Call Logs…</string>
    <string name="please_wait_logs_analysing">Please wait till we complete log analysis.</string>
    <string name="analyzing_complete">Call Logs Analyzed!</string>
    <string name="unknown_logs_detected">Some ambiguous numbers are detected</string>
    <string name="unknown_logs_detected_2">(It is recommend to categorize them for enhanced experience)</string>
    <string name="categorize_now">Categorize Now</string>
    <string name="skip">SKIP</string>
    <string name="mobile_number_hint">Mobile Number(10 Digits)</string>
    <string name="your_operator">Your Operator Circle</string>
    <string name="start_date_of_cycle">Start Date of Bill Cycle</string>
    <string name="mode_of_calculation"><div>Mode of Calculation <a href="">(Help)</a></div></string>
    <string name="mode_of_calculation_msg">Select how your operator costs you</string>
    <string name="accept_tnc"><div>I Accept <a href="com.evadroid.calle.terms://">Terms &amp; Conditions</a></div></string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="tnc_details">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. We are offering you this app to use for your own personal use without cost, but you should be aware that you cannot send it on to anyone else, and you’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also should not try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to 3vaDroidInc.\n\nCall-E is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n\nCall-E cannot take responsibility for the app not working at full functionality such as wrong minute counting or, if you have modified the app data or the system Call Logs or You have turned off the phone immediately after call or other malfunction happens in OS.  Call-E does not anonymously takes or sends personal data to anywhere. Call-E just read call Logs to get minutes information and stores it in its personal local database. If your Call Log details are misused by some hacker, or third party Call-E does not take any responsibilities for that.\n\nAt some point we may wish to update the app. The app is currently available on Android and you’ll need to download the updates if you want to keep using the app. Call-E does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.</string>
    <string name="please_accept_tnc">Please read &amp; accept Terms and Conditions</string>
    <string name="minutes_info">Minutes (e.g. 50p/1min)</string>
    <string name="seconds_info">Seconds (e.g. 1p/1sec)</string>
    <string name="plan_based_preferences">Usage Details</string>
    <string name="title_modify_cycle">Modify Your Bill Cycle</string>
    <string name="summary_modify_cycle">Your minutes will reset on date %d of every month</string>
    <string name="dialog_title_modify_cycle">Select Start Date of Your Bill Cycle</string>
    <string name="title_show_most_contacted">Show Frequent Contacts</string>
    <string name="summary_show_most_contacted">Enable/Disable display of Frequent Contacts on Home Page</string>
    <string name="summary_reset_application">Delete all data and settings of this application</string>
    <string name="title_reset_application">Reset Application</string>
    <string name="title_help">Help</string>
    <string name="summary_help">FAQs and help to use the app</string>
    <string name="title_about">About</string>
    <string name="summary_about">About App version 1.5</string>
    <string name="about_text_1">Advance Call Timer and Logger\nVersion 1.5\nApp Developed By 3vaDroidInc\nCopyright 2014-2015.</string>
    <string name="about_text_credits">Other Credits\n<div>Some of In App Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="http://www.flaticon.com/authors/appzgear" title="Appzgear">Appzgear</a>, <a href="http://www.flaticon.com/authors/linh-pham" title="Linh Pham">Linh Pham</a>, <a href="http://www.flaticon.com/authors/zurb" title="Zurb">Zurb</a>, <a href="http://www.flaticon.com/authors/sergiu-bagrin" title="Sergiu Bagrin">Sergiu Bagrin</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div></string>
    <string name="title_notification_toast">Enable Minutes Toast</string>
    <string name="summary_notification_toast">Shows toast after calls of how many minutes are used.</string>
    <string name="title_notification_limit_cross">Show Limit Cross Warning</string>
    <string name="summary_notification_limit_cross">Shows notification after calls if warning limits are crossed for outgoing calls.</string>
    <string name="title_mode_of_use">Mode of Use (Min/Sec)</string>
    <string name="summary_mode_of_use">Select whether to calculate call in Minutes or in Seconds</string>
    <string name="dialog_title_mode_of_use">Select Mode of Use</string>
    <string name="title_user_circle">Modify User Circle</string>
    <string name="summary_user_circle">Your current user circle is : </string>
    <string name="dialog_title_user_circle">Select Your Operator Circle</string>
    <string name="action_delete_items">Delete Selected</string>
    <string name="notifications">Notifications</string>
    <string name="user_specified_numbers">User Specified Numbers</string>
    <string name="title_excluded_numbers">Free Call Numbers</string>
    <string name="title_delete_excluded_numbers">Delete Free Call Numbers</string>
    <string name="summary_excluded_numbers">Add your CUG, Customer Care, Toll Free phone numbers which do not charge call cost</string>
    <string name="title_local_numbers">Local Numbers</string>
    <string name="title_delete_local_numbers">Delete Local Numbers</string>
    <string name="summary_local_numbers">Add phone numbers which are considered to be local calls if app detects them wrongly</string>
    <string name="title_std_numbers">STD Numbers</string>
    <string name="title_delete_std_numbers">Delete STD Numbers</string>
    <string name="summary_std_numbers">Add phone numbers which are considered to be STD calls if app detects them wrongly</string>
    <string name="reset_confirmation_msg">Resetting app will delete all Logs, all saved settings. Do you want to continue?</string>
    <string name="reset_complete">Application Reset Completed.</string>
    <string name="number_too_short">Number is too short</string>
    <string name="enter_a_valid_number">Please enter a Valid Mobile Number</string>
    <string name="dialog_title_user_circle_changed">User Circle Changed</string>
    <string name="body_user_circle_changed">You have changed your local operator circle. It is recommended to review your user specified local and STD numbers for correct categorization.</string>
    <string name="this_month">This Month</string>
    <string name="logs_history">Logs History</string>
    <string name="usage_history">Usage History</string>
    <string name="logs">Logs</string>
    <string name="usage">Usage</string>
    <string name="title_want_to_add_cug">Add Free Numbers</string>
    <string name="message_want_to_add_cug">Do you want to add any Customer Care or Closed User Group(CUG) numbers which are not charged by operator?</string>
    <string name="dialog_title_mode_of_calculation">What is Mode of Calculation?</string>
    <string name="help_mode_of_calculation">Minutes: Select this mode if your carrier charges on per minute basis (e.g. Rs. 0.80/Min). 30 sec call is considered as a one minute.\n\nSeconds: Select this mode if your carrier charges you on per second basis(e.g. 1p/1sec). 30 second call is not rounded off to minutes.</string>
    <string name="logs_resynced">Logs Re-synced Successfully</string>
    <string name="message_button">Message</string>
    <string name="call_button">Call</string>
    <string name="last_call_details">Last Call Details</string>
    <string name="current_bill_cycle">Current Bill Cycle</string>
    <string name="click_item_for_more_info">Click on below items for detailed Log info</string>
    <string name="most_talked_contacts">Frequent Contacts</string>
    <string name="more_info">More Info</string>
    <string name="local">Local</string>
    <string name="std">STD</string>
    <string name="roaming">Roaming</string>
    <string name="isd">ISD</string>
    <string name="free">Free</string>
    <string name="mins">Mins</string>
    <string name="unknown">Unknown</string>
    <string name="std_local_hint">STD+Local Free Mins</string>
    <string name="std_hint">STD Free Mins</string>
    <string name="local_hint">Local Free Mins</string>
    <string name="roaming_hint">Roaming Free Mins</string>
    <string name="isd_hint">ISD Free Mins</string>
    <string name="action_add_to_std">Add to STD Numbers</string>
    <string name="action_add_to_free">Add to Free Numbers</string>
    <string name="action_add_to_local">Add to Local Numbers</string>
    <string name="action_delete">Delete Log</string>
    <string name="action_copy_number">Copy Number</string>
    <string name="finish">FINISH</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
</resources>