<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.foo.temps.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resync"
        android:orderInCategory="101"
        android:title="@string/action_resync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="102"
        android:title="@string/action_rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="103"
        android:title="@string/action_share_app"
        app:showAsAction="never" />
</menu>
