<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.app.postpaidcallusage.HomeActivity$SetupWizardFragment"
    android:id="@+id/setup_circle_root_layout">

    <LinearLayout
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#66d6d6d6"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <View android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#77a6a6a6"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#ee000000"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onFinishClicked"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_marginTop="-40dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:gravity="center"
            android:textColor="@color/almost_black"
            android:text="@string/setup_page_3_text"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_number_text_input_layout"
            android:layout_marginTop="@dimen/setup_screen_between_margin"
            android:layout_width="250dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/mobile_number_edit_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/mobile_number_hint"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your_operator"
            android:textColor="@color/title_green"
            android:paddingTop="@dimen/setup_screen_between_margin"/>

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_state"
            android:entries="@array/circle_states"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/start_date_of_cycle"
            android:textColor="@color/title_green"
            android:paddingTop="@dimen/setup_screen_between_margin"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/spinner_date"
            android:entries="@array/dates"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mode_of_calculation"
            android:linksClickable="true"
            android:clickable="true"
            android:textColor="@color/title_green"
            android:onClick="onShowMinutesHelp"
            android:paddingTop="@dimen/setup_screen_between_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/almost_black"
            android:text="@string/mode_of_calculation_msg"/>

        <RadioGroup
            android:id="@+id/group_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_info"
                android:layout_weight="1"
                android:id="@+id/min"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seconds_info"
                android:id="@+id/sec" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/tnc_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tnc_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/accept_tnc"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>