<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evadroid.calle.setupwizard.LogAnalyzerActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/analyzing_text"
            android:text="@string/analyzing_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginBottom="4dp"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:id="@+id/progressBar" />

        <TextView
            android:id="@+id/unknown_logs_detected"
            android:text="@string/unknown_logs_detected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:padding="4dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/categorize_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorize_now"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    </LinearLayout>
    <Button
        android:id="@+id/skip_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/action_bar_primary_color"
        android:background="?android:attr/selectableItemBackground"
        android:visibility="gone"/>

</RelativeLayout>
